[2] adding new method, and cleaning the code